// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchItem should render future match correctly 1`] = `
<div
  className="MuiButtonBase-root-24 MuiListItem-root-12 MuiListItem-default-15 MuiListItem-gutters-20 MuiListItem-divider-19 MuiListItem-button-21 Component-matchItem-8"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-34 Component-homeIcon-7"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-10"
  >
    <div
      className="Component-dash-2"
    >
      :
    </div>
  </div>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-guest-5"
  >
    <div
      className="MuiListItemIcon-root-34 Component-awayIcon-1"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-38"
  />
</div>
`;

exports[`MatchItem should render played match correctly 1`] = `
<div
  className="MuiButtonBase-root-24 MuiListItem-root-12 MuiListItem-default-15 MuiListItem-gutters-20 MuiListItem-divider-19 MuiListItem-button-21 Component-matchItem-8"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-34 Component-homeIcon-7"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-10 Component-green-4"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-2"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-guest-5"
  >
    <div
      className="MuiListItemIcon-root-34 Component-awayIcon-1"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-38"
  />
</div>
`;

exports[`MatchItem should render predicted wrong match correctly 1`] = `
<div
  className="MuiButtonBase-root-24 MuiListItem-root-12 MuiListItem-default-15 MuiListItem-gutters-20 MuiListItem-divider-19 MuiListItem-button-21 Component-matchItem-8"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-home-6"
  >
    <div>
      Test2
    </div>
    <div
      className="MuiListItemIcon-root-34 Component-homeIcon-7"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
  </div>
  <div
    className="Component-score-10 Component-red-9"
  >
    <div>
      2
    </div>
    <div
      className="Component-dash-2"
    >
      :
    </div>
    <div>
      1
    </div>
  </div>
  <div
    className="MuiListItemText-root-27 Component-text-11 Component-guest-5"
  >
    <div
      className="MuiListItemIcon-root-34 Component-awayIcon-1"
    >
      <div
        className="MuiAvatar-root-35 Component-logo-33"
      >
        <img
          className="MuiAvatar-img-37"
          src="https://cdn2.iconfinder.com/data/icons/sport-items-2/512/football_soccer_badge_shield_ball_heraldic-128.png"
        />
      </div>
    </div>
    <div>
      Test1
    </div>
  </div>
  <span
    className="MuiTouchRipple-root-38"
  />
</div>
`;
